--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<title>Aysha Qazi</title>
+	<meta charset="utf-8"/>
+	<link rel="stylesheet" type="text/css" href="main.css">
+</head>
 <body>
 <h1>Aysha Qazi</h1>
 <p>Programmer. Writer. Believer.</p>
