--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-<h1>Aysha Qazi</h1>
-<p>Programmer. Writer. Believer.</p>
+  <header>
+    <img src="Self.jpg" alt="Aysha" style="width:500px; height: 600px;">
+  <h1>Aysha Qazi</h1>
+  <p>Programmer. Writer. Believer.</p>
 </body>
 </html>
