--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <img src="Self.jpg" alt="Aysha" style="width:100px; height: 100px;">
+    <img src="Self.jpg" alt="Aysha" class="image" style="width:100px; height: 100px;">
 
   <h1>Aysha Qazi</h1>
   <p>Programmer. Writer. Believer.</p>
