--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <img src="Self.jpg" alt="Aysha" class="image" style="width:100px; height: 100px;">
 
   <h1>Aysha Qazi</h1>
-  <p>Programmer. Writer. Believer.</p>
+  <p>Programmer. Writer.</p>
+
 </body>
 </html>
